# AoC

./: .gitignore  README.md
2022/: 10a.py  10b.py  11a.py  11b.py  12a.py  12b.py  13a.py  13b.py  14a.py  14b.py  15a.py  15b.py  17a.py  17b.py  18a.py  18b.py  19a.py  19b.py  1a.py  1b.py  20a.py  20b.py  21a.py  21b.py  22a.py  22b.py  23a.py  23b.py  25a.py  2a.py  2b.py  3a.py  3b.py  4a.py  4b.py  5a.py  5b.py  6a.py  6b.py  7a.py  (+6 more)
2022/day16/: Cargo.toml
2022/day16/src/: lib.rs
2022/day24/src/: lib.rs
2023/: Cargo.toml
2023/inputs/: 20-real.gv
2023/src/: nom.rs
2024/: Cargo.toml
2024/src/: nom.rs
2025/: Cargo.toml
2025/src/: nom.rs
