[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
num-bigint = "0.4.4"
num-integer = "0.1.45"

[profile.release]
opt-level = 3
overflow-checks = true
